--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -282,4 +282,7 @@ network_policies:
     shared-file-system:manila:Deployment:manila-api:
       - from:
         - default: selector
+    memcached:memcached:StatefulSet:openstack-memcached-memcached:
+      - from:
+        - default: selector
   egress: {}
