--- a/tests/fixtures/render_service_template/output/memcached/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/memcached/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -13,8 +13,23 @@ spec:
           prometheus_memcached_exporter: prometheus-memcached-exporter:latest
       manifests:
         deployment: false
-        network_policy: false
+        network_policy: true
         statefulset: true
+      network_policy:
+        server:
+          spec:
+            ingress:
+              - from:
+                - default: selector
+              - from:
+                - ipBlock:
+                    cidr: 192.168.0.0/16
+            podSelector:
+              matchLabels:
+                application: memcached
+                component: server
+            policyTypes:
+            - Ingress
       monitoring:
         prometheus:
           enabled: true
