Add network policies for telemetry services
* Removed ceilometer api, collector which are not deployed.

Related-Prod: https://mirantis.jira.com/browse/PRODX-34775
Change-Id: I30fc285f953828b4488b57f0c1cbc68ed34951f6

--- a/openstack_controller/templates/child_objects/metering.yaml
+++ b/openstack_controller/templates/child_objects/metering.yaml
@@ -39,22 +39,6 @@ ceilometer:
         component: ipmi
       type: dynamic
   Deployment:
-    ceilometer-api:
-      connections:
-        egress:
-          - {{ to_child_object("coordination", "etcd", "StatefulSet", "etcd-etcd", ["client"]) | indent(12)}}
-          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
-          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
-          - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
-          - {{ to_child_object("networking", "neutron", "Deployment", "neutron-server", ["q-api"]) | indent(12)}}
-          - {{ to_child_object("memcached", "memcached", "StatefulSet", "openstack-memcached-memcached", ["memcached"]) | indent(12)}}
-      hash_fields: []
-      images:
-      - ceilometer_api
-      manifest: deployment_api
-      pod_labels:
-        application: ceilometer
-        component: api
     ceilometer-central:
       connections:
         egress:
@@ -73,24 +57,6 @@ ceilometer:
       pod_labels:
         application: ceilometer
         component: central
-    ceilometer-collector:
-      connections:
-        egress:
-          - {{ to_child_object("coordination", "etcd", "StatefulSet", "etcd-etcd", ["client"]) | indent(12)}}
-          - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
-          - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
-          - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
-          - {{ to_child_object("networking", "neutron", "Deployment", "neutron-server", ["q-api"]) | indent(12)}}
-          - {{ to_child_object("image", "glance", "Deployment", "glance-api", ["g-api"]) | indent(12)}}
-          - {{ to_child_object("block-storage", "cinder", "Deployment", "cinder-api", ["c-api"]) | indent(12)}}
-          - {{ to_child_object("memcached", "memcached", "StatefulSet", "openstack-memcached-memcached", ["memcached"]) | indent(12)}}
-      hash_fields: []
-      images:
-      - ceilometer_collector
-      manifest: deployment_collector
-      pod_labels:
-        application: ceilometer
-        component: collector
     ceilometer-notification:
       connections:
         egress:
@@ -100,6 +66,7 @@ ceilometer:
           - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
           - {{ to_child_object("networking", "neutron", "Deployment", "neutron-server", ["q-api"]) | indent(12)}}
           - {{ to_child_object("memcached", "memcached", "StatefulSet", "openstack-memcached-memcached", ["memcached"]) | indent(12)}}
+          - {{ to_child_object("metric", "gnocchi", "Deployment", "gnocchi-api", ["gn-api"]) | indent(12)}}
       hash_fields: []
       images:
       - ceilometer_notification
@@ -145,6 +112,8 @@ ceilometer:
       connections:
         egress:
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          # ceilometer-upgrade command running in db sync job creates gnocchi resource types
+          - {{ to_child_object("metric", "gnocchi", "Deployment", "gnocchi-api", ["gn-api"]) | indent(12)}}
     ceilometer-ks-endpoints:
       connections:
         egress:
