--- a/openstack_controller/templates/child_objects/alarming.yaml
+++ b/openstack_controller/templates/child_objects/alarming.yaml
@@ -21,6 +21,7 @@ aodh:
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
           - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
           - {{ to_child_object("memcached", "memcached", "StatefulSet", "openstack-memcached-memcached", ["memcached"]) | indent(12)}}
+          - {{ to_child_object("metric", "gnocchi", "Deployment", "gnocchi-api", ["gn-api"]) | indent(12)}}
       hash_fields: []
       images:
       - aodh_api
@@ -28,6 +29,10 @@ aodh:
       pod_labels:
         application: aodh
         component: api
+      ports:
+      - port: 8042
+        name: a-api
+        protocol: TCP
     aodh-evaluator:
       connections:
         egress:
@@ -36,6 +41,7 @@ aodh:
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
           - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
           - {{ to_child_object("memcached", "memcached", "StatefulSet", "openstack-memcached-memcached", ["memcached"]) | indent(12)}}
+          - {{ to_child_object("metric", "gnocchi", "Deployment", "gnocchi-api", ["gn-api"]) | indent(12)}}
       hash_fields: []
       images:
       - aodh_evaluator
