--- a/openstack_controller/templates/child_objects/identity.yaml
+++ b/openstack_controller/templates/child_objects/identity.yaml
@@ -38,6 +38,8 @@ keystone:
     keystone-client:
       connections:
         egress:
+          - {{ to_child_object("alarming", "aodh", "Deployment", "aodh-api", ["a-api"]) | indent(12)}}
+          - {{ to_child_object("metric", "gnocchi", "Deployment", "gnocchi-api", ["gn-api"]) | indent(12)}}
           - {{ to_child_object("orchestration", "heat", "Deployment", "heat-api", ["h-api"]) | indent(12)}}
           - {{ to_child_object("orchestration", "heat", "Deployment", "heat-cfn", ["h-cfn"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
