--- a/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/alarming/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -47,8 +47,27 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
+      network_policy:
+        api:
+          spec:
+            ingress:
+              - from:
+                - default: selector
+              - from:
+                - namespaceSelector:
+                    matchLabels:
+                      name: osh-system
+                - namespaceSelector:
+                    matchLabels:
+                      name: stacklight
+            podSelector:
+              matchLabels:
+                application: aodh
+                component: api
+            policyTypes:
+            - Ingress
       manifests:
-        network_policy: false
+        network_policy: true
         job_rabbit_init: false
         secret_ca_bundle: true
         cron_job_db_purge: true
