--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -294,4 +294,7 @@ network_policies:
     dns:designate:StatefulSet:designate-api:
       - from:
         - default: selector
+    key-manager:barbican:Deployment:barbican-api:
+      - from:
+        - default: selector
   egress: {}
