--- a/openstack_controller/templates/services/key-manager.yaml
+++ b/openstack_controller/templates/services/key-manager.yaml
@@ -115,9 +115,13 @@ spec:
         logging:
           logger_barbican:
             level: {{ spec.get('features', {}).get('logging', {}).get('barbican', {}).get('level', 'INFO') }}
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/key-manager.yaml' %}
+{%- endif %}
       manifests:
         cron_job_db_purge: true
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
         job_rabbit_init: false
         secret_ca_bundle: true
       endpoints:
