Add network policies for exporters
Related-Prod: PRODX-35444
Change-Id: I8068ea1f78482a35270450f9586c16dd285b7ee8

--- a/openstack_controller/templates/base/network_policies/cloudprober.yaml
+++ b/openstack_controller/templates/base/network_policies/cloudprober.yaml
@@ -5,8 +5,7 @@
           spec:
             podSelector:
               matchLabels:
-                application: cloudprober
-                component: prober
+{{ service_childs[prober].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
