--- a/openstack_controller/templates/child_objects/memcached.yaml
+++ b/openstack_controller/templates/child_objects/memcached.yaml
@@ -13,3 +13,6 @@ memcached:
         - port: 11211
           name: memcached
           protocol: TCP
+        - port: 9150
+          name: metrics
+          protocol: TCP
