--- a/openstack_controller/templates/child_objects/messaging.yaml
+++ b/openstack_controller/templates/child_objects/messaging.yaml
@@ -1,5 +1,22 @@
 {%- from 'macros/connections.j2' import to_child_object %}
 rabbitmq:
+  Deployment:
+    openstack-rabbitmq-rabbitmq-exporter:
+      connections:
+        egress:
+          - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["http"]) | indent(12)}}
+      images:
+      - prometheus_rabbitmq_exporter
+      manifest: ''
+      hash_fields: []
+      pod_labels:
+        application: prometheus_rabbitmq_exporter
+        component: exporter
+        release_group: openstack-rabbitmq
+      ports:
+      - port: 9095
+        name: metrics
+        protocol: TCP
   Job:
     openstack-rabbitmq-cluster-wait:
       connections:
@@ -13,7 +30,7 @@ rabbitmq:
       pod_labels:
         application: rabbitmq
         component: cluster-wait
-        release_group: openstack-rabbitmq-rabbitmq
+        release_group: openstack-rabbitmq
   StatefulSet:
     openstack-rabbitmq-rabbitmq:
       hash_fields: []
@@ -24,7 +41,7 @@ rabbitmq:
       pod_labels:
         application: rabbitmq
         component: server
-        release_group: openstack-rabbitmq-rabbitmq
+        release_group: openstack-rabbitmq
       ports:
       - port: 15672
         name: http
