--- a/tests/fixtures/render_service_template/output/database/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/database/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -102,6 +102,16 @@ spec:
               - from:
                  - ipBlock:
                      cidr: 192.168.0.0/16
+                ports:
+                - port: 3306
+                  protocol: TCP
+              - from:
+                - namespaceSelector:
+                    matchLabels:
+                      kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 9104
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: mariadb
