--- a/tests/fixtures/render_service_template/output/memcached/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/memcached/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -24,6 +24,16 @@ spec:
               - from:
                 - ipBlock:
                     cidr: 192.168.0.0/16
+                ports:
+                - port: 11211
+                  protocol: TCP
+              - from:
+                - namespaceSelector:
+                    matchLabels:
+                      kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 9150
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: memcached
