--- a/openstack_controller/templates/base/network_policies/coordination.yaml
+++ b/openstack_controller/templates/base/network_policies/coordination.yaml
@@ -1,13 +1,17 @@
 {%- from 'macros/connections.j2' import from_pod_networks %}
+{%- from 'macros/connections.j2' import from_namespaces %}
+{%- set etcd_server = "coordination:etcd:StatefulSet:etcd-etcd" %}
+{%- set lma_ns_list = ["lma_deployment"] | namespaces  %}
         server:
           spec:
             podSelector:
               matchLabels:
-                application: etcd
-                component: server
+{{ service_childs[etcd_server].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
-{{ network_policies["ingress"]["coordination:etcd:StatefulSet:etcd-etcd"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][etcd_server] | toyaml | indent(14, first=True) }}
               - from:
-{{ from_pod_networks(pod_networks) | indent(18) }}
+{{ from_pod_networks(pod_networks, service_childs[etcd_server].get_np_ports(["client","peer"])) | indent(16) }}
+              - from:
+{{ from_namespaces(lma_ns_list, service_childs[etcd_server].get_np_ports(["client"])) | indent(16) }}
