--- a/openstack_controller/templates/base/network_policies/messaging.yaml
+++ b/openstack_controller/templates/base/network_policies/messaging.yaml
@@ -1,18 +1,28 @@
 {%- from 'macros/connections.j2' import from_pod_networks %}
 {%- from 'macros/connections.j2' import from_namespaces %}
-{%- set ns_list = ["lma_deployment"] | namespaces  %}
+{%- set lma_ns_list = ["lma_deployment"] | namespaces  %}
+{%- set rabbitmq_server = "messaging:rabbitmq:StatefulSet:openstack-rabbitmq-rabbitmq" %}
+{%- set rabbitmq_exporter = "messaging:rabbitmq:Deployment:openstack-rabbitmq-rabbitmq-exporter" %}
         server:
           spec:
             podSelector:
               matchLabels:
-                application: rabbitmq
-                component: server
-                release_group: openstack-rabbitmq
+{{ service_childs[rabbitmq_server].get_pod_labels() | toyaml | indent(16, first=True) }}
             policyTypes:
             - Ingress
             ingress:
-{{ network_policies["ingress"]["messaging:rabbitmq:StatefulSet:openstack-rabbitmq-rabbitmq"] | toyaml | indent(14, first=True) }}
+{{ network_policies["ingress"][rabbitmq_server] | toyaml | indent(14, first=True) }}
               - from:
-{{ from_pod_networks(pod_networks) | indent(18) }}
+{{ from_pod_networks(pod_networks, service_childs[rabbitmq_server].get_np_ports(["amqp"])) | indent(16) }}
               - from:
-{{ from_namespaces(ns_list) | indent(18) }}
+{{ from_namespaces(lma_ns_list) | indent(16) }}
+        exporter:
+          spec:
+            podSelector:
+              matchLabels:
+{{ service_childs[rabbitmq_exporter].get_pod_labels() | toyaml | indent(16, first=True) }}
+            policyTypes:
+            - Ingress
+            ingress:
+              - from:
+{{ from_namespaces(lma_ns_list, service_childs[rabbitmq_exporter].get_np_ports(["metrics"])) | indent(16) }}
