--- a/tests/fixtures/network_policies/output/networking.yaml
+++ b/tests/fixtures/network_policies/output/networking.yaml
@@ -161,3 +161,12 @@ networking:rabbitmq:StatefulSet:openstack-neutron-rabbitmq-rabbitmq:
   ports:
   - port: 5672
     protocol: TCP
+- from:
+  - podSelector:
+      matchLabels:
+        application: prometheus_rabbitmq_exporter
+        component: exporter
+        release_group: openstack-neutron-rabbitmq
+  ports:
+  - port: 15672
+    protocol: TCP
