--- a/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/coordination/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -23,6 +23,18 @@ spec:
               - from:
                  - ipBlock:
                      cidr: 192.168.0.0/16
+                ports:
+                - port: 2379
+                  protocol: TCP
+                - port: 2380
+                  protocol: TCP
+              - from:
+                - namespaceSelector:
+                    matchLabels:
+                      kubernetes.io/metadata.name: stacklight
+                ports:
+                - port: 2379
+                  protocol: TCP
             podSelector:
               matchLabels:
                 application: etcd
